# wednesday-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  rustfmt.toml
.github/: commit-msg-regex.txt  commit-msg-template.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/hooks/: commit-msg-check
.github/workflows/: commit-msg-check.yml  rust-actions.yml
wednesday-bootstrap/: Cargo.toml
wednesday-bootstrap/examples/: candles_1h.json  engine_with_historic_bars.rs  engine_with_live_tradres.rs  signed_binance_spot_get_test.rs  signed_binance_spot_post_test.rs  signed_binance_spot_post_test_2.rs
wednesday-bootstrap/src/: main.rs
wednesday-connector/: Cargo.toml
wednesday-connector/src/: lib.rs
wednesday-connector/src/exchange/: channel.rs  connector.rs  mod.rs
wednesday-connector/src/exchange/binance/: book.rs  channel.rs  market.rs  mod.rs  subscription.rs
wednesday-connector/src/exchange/binance/futures/: l2.rs  mod.rs  trade.rs
wednesday-connector/src/exchange/binance/spot/: l2.rs  mod.rs  trade.rs
wednesday-connector/src/exchange/bybit/: channel.rs  market.rs  mod.rs  subscription.rs
wednesday-connector/src/exchange/bybit/linear/: mod.rs
wednesday-connector/src/exchange/bybit/model/: l2.rs  message.rs  mod.rs  trade.rs
wednesday-connector/src/exchange/bybit/spot/: mod.rs
wednesday-connector/src/protocol/: metric.rs  mod.rs
wednesday-connector/src/protocol/http/: builder.rs  mod.rs  parser.rs
wednesday-connector/src/protocol/http/private/: mod.rs
wednesday-connector/src/protocol/http/public/: mod.rs
wednesday-connector/src/protocol/http/rest/: client.rs  mod.rs  request.rs
wednesday-connector/src/protocol/http/websocket/: mod.rs
wednesday-connector/src/stream/: exchange.rs  market.rs  mod.rs  parser.rs  selector.rs
wednesday-connector/src/stream/builder/: mod.rs  multiple.rs
wednesday-connector/src/stream/protocol/: websocket.rs  ws_stream.rs
wednesday-connector/src/subscriber/: mapper.rs  mod.rs  validator.rs
wednesday-connector/src/subscriber/protocol/: websocket.rs
wednesday-connector/src/subscriber/subscription/: kind.rs  mod.rs
wednesday-connector/src/transformer/: iterator.rs  mod.rs  stateful.rs  stateless.rs  updater.rs
wednesday-core/: Cargo.toml
wednesday-core/src/: lib.rs
wednesday-core/src/data/: historical.rs  live.rs  mod.rs
wednesday-core/src/engine/: builder.rs  commond.rs  mod.rs  trader.rs  trader_builder.rs
wednesday-core/src/execution/: mod.rs  simulated.rs
wednesday-core/src/model/: balance.rs  data_error.rs  decision.rs  engine_error.rs  enums.rs  event.rs  execution_error.rs  fee.rs  fill_event.rs  market_meta.rs  mod.rs  order_event.rs  portfolio_error.rs  repository_error.rs  signal.rs
wednesday-core/src/model/position/: builder.rs  enterer.rs  exiter.rs  mod.rs  updater.rs
wednesday-core/src/oms/: allocator.rs  evaluator.rs  mod.rs
wednesday-core/src/portfolio/: builder.rs  generator.rs  mod.rs  updater.rs
wednesday-core/src/portfolio/repository/: in_memory.rs  mod.rs
wednesday-core/src/statistic/: converter.rs  dispersion.rs  mod.rs
wednesday-core/src/statistic/algorithm/: mod.rs  welford_online.rs
wednesday-core/src/statistic/metric/: drawdown.rs  mod.rs  ratio.rs
wednesday-core/src/statistic/summary/: data.rs  drawdown.rs  mod.rs  pnl.rs  trading.rs
wednesday-core/src/strategy/: mod.rs  sample.rs  tick_str1.rs
wednesday-macro/: Cargo.toml
wednesday-macro/src/: lib.rs
wednesday-macro/tests/: test_as_url_params.rs
wednesday-model/: Cargo.toml
wednesday-model/src/: account.rs  bar.rs  deserialization.rs  enums.rs  error.rs  events.rs  identifiers.rs  instruments.rs  lib.rs  order.rs  orderbook.rs  position.rs  trade.rs  trade_report.rs
wednesday-model/src/calculator/: mod.rs
