[tool.poetry]
name = "tearsstreams"
version = "0.1.0"
description = "Advanced High-Frequency Trading Algorithm via KRX DMA Connectin"
authors = ["TearsStreams Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
scapy = "^2.5.0"
openpyxl = "^3.1.2"
jupyter = "^1.0.0"
pandas = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.1"
pre-commit = "^3.6.0"
isort = "^5.13.2"
jupyterlab = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Below are the configuration files for the dev tools
[tool.isort]
py_version = "311"
skip_glob = []
combine_as_imports = true
line_length = 120
ensure_newline_before_comments = true
force_single_line = true
single_line_exclusions = ["typing"]
include_trailing_comma = true
multi_line_output = 3
lines_after_imports = 2
use_parentheses = true
filter_files = true

[tool.codespell]

[tool.ruff]
line-length = 120