[package]
name = "wednesday-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wednesday-model.workspace = true
wednesday-macro.workspace = true
wednesday-connector.workspace = true
wednesday-core.workspace = true

tracing = "0.1.36"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tokio.workspace = true
tokio-stream.workspace = true
rustls = { version = "0.23.9", features = ["logging", "tls12", "ring"] }

futures = "0.3.21"
async-trait = "0.1.57"
tokio-tungstenite = { version = "0.23.0", features = ["rustls-tls-webpki-roots"] }
pin-project = "1.0.10"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"] }

url = "2.5.0"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_qs = "0.13.0"
serde_urlencoded = "0.7.1"

thiserror = "1.0.58"
anyhow.workspace = true

hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
base64 = "0.22.0"

chrono = { version = "0.4.35", features = ["serde"] }
bytes = "1.5.0"
rust_decimal = "1.34.3"

uuid = {version = "1.2.2", features = ["v4", "serde"]}
parking_lot = "0.12.1"