[package]
name = "wednesday-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
wednesday-model.workspace = true
wednesday-macro.workspace = true

# Logging
tracing = "0.1.36"

# Async
tokio.workspace = true
tokio-stream.workspace = true

futures = "0.3.21"
async-trait = "0.1.57"
tokio-tungstenite = { version = "0.23.0", features = ["rustls-tls-webpki-roots"] }
pin-project = "1.0.10"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"] }

# Protocol
url = "2.5.0"

# SerDe
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_qs = "0.13.0"
serde_urlencoded = "0.7.1"

# Error
thiserror = "1.0.58"
anyhow.workspace = true

# Cryptograhic Signatures
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
base64 = "0.22.0"

# Misc
chrono = { version = "0.4.35", features = ["serde"] }
bytes = "1.5.0"
rust_decimal = "1.34.3"
