[package]
name = "wednesday-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
unused_must_use = "allow"


[dependencies]
wednesday-model.workspace = true
clippy.workspace = true

# Logging
tracing = "0.1.36"

# Async
tokio = { version = "1.20.1", features = ["sync"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
futures = "0.3.21"

# Error
thiserror = "1.0.32"

# SerDe
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

# Persistence
redis = "0.22.2"

# Strategy
ta = "0.5.0"

# Misc
uuid = {version = "1.2.2", features = ["v4", "serde"]}
chrono = {version = "0.4.21", features = ["serde"]}
prettytable-rs = "0.10.0"
parking_lot = "0.12.1"
