[package]
name = "wednesday-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies.convert_case]
version = "0.6.0"

[dependencies.proc-macro2]
version = "1.0.49"

[dependencies.quote]
version = "1.0.23"

[dependencies.syn]
version = "2.0.66"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"