[package]
name = "wednesday-model"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"


[dependencies]
# workspace
wednesday-macro.workspace = true 

# Logging
tracing = "0.1.36"

# Async
# tokio = { version = "1.20.1", features = ["sync", "macros", "rt-multi-thread"] }
# tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio.workspace = true
tokio-stream.workspace = true

futures = "0.3.21"
async-trait = "0.1.57"
tokio-tungstenite = { version = "0.23.0", features = ["rustls-tls-webpki-roots"] }
pin-project = "1.0.10"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"] }

# Protocol
url = "2.3.1"

# SerDe
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_qs = "0.13.0"
serde_urlencoded = "0.7.1"

# Error
thiserror = "1.0.58"
anyhow.workspace = true

# Misc
chrono = { version = "0.4.35", features = ["serde"] }
bytes = "1.5.0"
rust_decimal = "1.34.3"
